--- a/FunctionalProgrammingProblems/FunctionalProgrammingProblems.csproj
+++ b/FunctionalProgrammingProblems/FunctionalProgrammingProblems.csproj
@@ -7,4 +7,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Baseline" Version="4.1.0" />
+    <PackageReference Include="DryIoc.dll" Version="5.3.3" />
+  </ItemGroup>
+
 </Project>
